<resources>
    <string name="app_name">Е-сканер</string>
    <string name="search_data">Дані пошуку</string>
    <string name="Title">title</string>
    <string name="Open">open</string>
    <string name="DP">dp</string>
    <string name="open_etable">tb</string>
    <string name="make_photo">makephoto</string>
    <string name="scanning_photo">scanning</string>
    <string name="result">result</string>
    <string name="add_image">add image</string>
    <string name="image_perview">umage perview</string>
    <string name="open_result">open result</string>
    <string name="E_num">enum</string>
    <string name="E_name">ename</string>
    <string name="E_categories">ecat</string>
    <string name="leveld">lev</string>
    <string name="eorigin">eor</string>
    <string name="ediscr">eduscr</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="back">back</string>
    <string name="read">read</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Електронна пошта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Увійдіть або зареєструйтесь</string>
    <string name="action_sign_in_short">Увійти</string>
    <string name="welcome">"Ласкаво просимо!"</string>
    <string name="invalid_username">Недійсне ім’я користувача</string>
    <string name="invalid_password">Пароль повинен складати> 5 символів</string>
    <string name="login_failed">"Помилка логіну"</string>
    <string name="name">Назва Е-добавки</string>
    <string name="age">Вік</string>
    <string name="email">Електронна пошта</string>
    <string name="password">Пароль</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="forget_password">Забули пароль</string>
    <string name="regist">Регістрація</string>
    <string name="login">Увійти</string>
    <string name="e_scann">Е-сканер</string>
    <string name="register">Зареєструватися</string>
</resources>