<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scanne.ShowActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@mipmap/ccc_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/e_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/E_num"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/e_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/E_name"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/e_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/E_categories"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/e_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leveld"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/e_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eorigin"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/e_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ediscr"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>