<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B0FF"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="326dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="326dp"
        android:layout_height="61dp"
        android:layout_above="@+id/editTextTextPersonName"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="86dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="326dp"
        android:layout_height="61dp"
        android:layout_above="@+id/editTextTextPersonName2"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="45dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="326dp"
        android:layout_height="61dp"
        android:layout_above="@+id/registerUser"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="44dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerUser"
        android:layout_width="282dp"
        android:layout_height="71dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="#FFFFFF"
        android:text="@string/register" />
</RelativeLayout>